# mobile-asset-tracker

./: LICENSE-MIT  README.md  report.schema.json
advertiser/: .gitignore  Cargo.toml  laze-project.yml
advertiser/.gram/: settings.jsonc
advertiser/src/: main.rs
app/: Cargo.toml  laze-project.yml
app/src/: main.rs
coap-proxy/: .env.example  .gitignore  Dockerfile  Readme.md  generate.py  server.diag  server.py
coap-proxy/deployment/docker-compose /: docker-compose.yaml
coap-proxy/deployment/kubernetes/: README.md  app.yml  service.yml
coap-tests/: Cargo.toml  laze-project.yml  peers.yml
coap-tests/src/: main.rs
common-types/: Cargo.toml
common-types/src/: lib.rs
gateway/: .gitignore  Cargo.toml  laze-project.yml
gateway/src/: board.rs  main.rs  pins.rs  sensors.rs
net/: Cargo.toml  laze-project.yml
net/src/: main.rs  pins.rs
reader/: Cargo.toml  laze-project.yml
reader/src/: main.rs  pins.rs
