[package]
name = "mobile-asset-tracker-advertiser"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = ["time"] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }

trouble-host = "0.5.1"
embassy-futures = { version = "0.1.1" }
heapless = { version = "0.9.2" }
uuid = { version = "1.23", default-features = false, features = ["serde"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
