[package]
name = "common-types"
version = "0.1.0"
edition = "2024"

[dependencies]
bt-hci = { version = "0.2.1", optional = true }
heapless = { version = "0.9.2", features = ["serde"] }
postcard = "1.1.3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
minicbor = { version = "=2.1.3", features = ["derive"], optional = true }
minicbor-adapters = { version = "0.0.8", optional = true }

[features]
default = []

from-impl = ["dep:bt-hci"]
std = ["minicbor/std", "serde/std"]
minicbor = ["dep:minicbor", "dep:minicbor-adapters"]
