[package]
name = "ble-scan-reporter-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "time",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
embassy-futures = { version = "0.1.1" }
heapless = "0.9.2"
trouble-host = { version = "0.5.1", features = ["derive", "scan"] }
embassy-nrf = { version = "0.8.0" }
postcard = { version = "1.1.3", features = ["use-defmt"] }
common-types = { path = "../common-types", features = ["from-impl"] }
embassy-sync = "0.6.2"


embedded-io-async = "0.6.1"

[target.'cfg(context = "nrf5340-net")'.dependencies]
embassy-nrf = { version = "0.8.0", features = ["nrf5340-net"] }
[target.'cfg(context = "nrf52832")'.dependencies]
# Disable NFC support for now, as we do not support it yet.
embassy-nrf = { version = "0.8.0", features = ["nfc-pins-as-gpio", "nrf52832"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
